minor swagger updates
