# docs/swagger.json
@@ -44,7 +44,7 @@
                     {
                         "type": "integer",
                         "description": "Filter items with stock greater than or equal to this value",
-                        "name": "minStock",
+                        "name": "min_stock",
                         "in": "query"
                     },
                     {
@@ -289,10 +289,12 @@
                     "type": "string"
                 },
                 "price": {
-                    "type": "number"
+                    "type": "number",
+                    "minimum": 0
                 },
                 "stock": {
-                    "type": "integer"
+                    "type": "integer",
+                    "minimum": 0
                 },
                 "updated_at": {
                     "type": "string"
